--- a/style.css
+++ b/style.css
@@ -13,9 +13,51 @@
   border-radius: 10%;
   text-align: center;
   font-size: 25px;
+  background-color: #ffaa00;
 }
 img{
-  width:40%;
+  width:60%;
+  border:10px solid gray;
+  border-radius: 50%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+
+
+}
+.childtwo{
+  border: 3px solid blue;
+  padding:3%;
+  width:70%;
+  margin:2%;
+  border-radius: 10%;
+  text-align: center;
+  background-color: #ff99ff;
+
+}
+
+@media only screen  and (max-width:480px){
+
+.parent{
+  border: 3px solid red;
+  display:flex;
+  flex-direction: column;
+}
+a{
+  word-wrap: break-word;
+}
+.childone{
+  border: 3px solid blue;
+  padding:3%;
+  width:90%;
+  margin:2%;
+  border-radius: 10%;
+  text-align: center;
+  font-size: 25px;
+  background-color: #cc33ff;
+}
+img{
+  width:60%;
   border:10px solid gray;
   border-radius: 50%;
   display:block;
@@ -26,8 +68,89 @@ img{
 .childtwo{
   border: 3px solid blue;
   padding:3%;
-  width:70%;
+  width:90%;
   margin:2%;
+  background-color: #0080ff;
   border-radius: 10%;
 
 }
+}
+@media only screen  and (min-width:481px) and (max-width:768px){
+
+  .parent{
+    border: 3px solid red;
+    display:flex;
+    flex-direction: row;
+  }
+  a{
+    word-wrap: break-word;
+  }
+  .childone{
+    border: 3px solid blue;
+    padding:3%;
+    width:50%;
+    margin:2%;
+    border-radius: 10%;
+    text-align: left;
+    font-size: 20px;
+    background-color: #1affa3;
+  }
+  img{
+    width:60%;
+    border:10px solid gray;
+    border-radius: 50%;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+  .childtwo{
+    border: 3px solid blue;
+    padding:3%;
+    width:50%;
+    margin:2%;
+    background-color:  #ff3300;
+    border-radius: 10%;
+
+  }
+  }
+
+  @media only screen  and (min-width:769px) and (max-width:1024px){
+
+    .parent{
+      border: 3px solid red;
+      display:flex;
+      flex-direction: row;
+    }
+    a{
+      word-wrap: break-word;
+    }
+    .childone{
+      border: 3px solid blue;
+      padding:3%;
+      width:50%;
+      margin:2%;
+      border-radius: 10%;
+      text-align: center;
+      font-size: 25px;
+      background-color: #99ff33;
+    }
+    img{
+      width:60%;
+      border:10px solid gray;
+      border-radius: 50%;
+      display:block;
+      margin-left: auto;
+      margin-right: auto;
+
+    }
+    .childtwo{
+      border: 3px solid blue;
+      padding:3%;
+      width:50%;
+      margin:2%;
+      background-color: #ff3385;
+      border-radius: 10%;
+
+    }
+    }
